baml_language/crates/baml_tests/snapshots/parser_stress/baml_tests__parser_stress__04_tir.snap
---
source: target/debug/build/baml_tests-bee4cf1d73080329/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function ComplexType:
    Return: Unknown
  Function DeepExpression:
    Return: Int
  Function Process22:
    Return: String
  Function Process54:
    Return: String
  Function Process95:
    Return: String
  Function Process60:
    Return: String
  Function Process68:
    Return: String
  Function Process14:
    Return: String
  Function Process79:
    Return: String
  Function Process84:
    Return: String
  Function Process33:
    Return: String
  Function Process12:
    Return: String
  Function Process74:
    Return: String
  Function Process99:
    Return: String
  Function Process64:
    Return: String
  Function Process52:
    Return: String
  Function Process7:
    Return: String
  Function Process80:
    Return: String
  Function Process58:
    Return: String
  Function Process97:
    Return: String
  Function Process36:
    Return: String
  Function Process63:
    Return: String
  Function Process19:
    Return: String
  Function Process83:
    Return: String
  Function Process18:
    Return: String
  Function Process26:
    Return: String
  Function Process43:
    Return: String
  Function Process46:
    Return: String
  Function Process62:
    Return: String
  Function Process87:
    Return: String
  Function Process44:
    Return: String
  Function Process47:
    Return: String
  Function Process35:
    Return: String
  Function Process38:
    Return: String
  Function Process41:
    Return: String
  Function Process28:
    Return: String
  Function Process65:
    Return: String
  Function Process6:
    Return: String
  Function Process32:
    Return: String
  Function Process92:
    Return: String
  Function Process55:
    Return: String
  Function Process66:
    Return: String
  Function Process56:
    Return: String
  Function Process67:
    Return: String
  Function Process3:
    Return: String
  Function Process75:
    Return: String
  Function Process48:
    Return: String
  Function Process49:
    Return: String
  Function Process61:
    Return: String
  Function Process96:
    Return: String
  Function Process34:
    Return: String
  Function Process59:
    Return: String
  Function Process89:
    Return: String
  Function Process45:
    Return: String
  Function Process86:
    Return: String
  Function Process16:
    Return: String
  Function Process39:
    Return: String
  Function Process82:
    Return: String
  Function Process2:
    Return: String
  Function Process27:
    Return: String
  Function Process53:
    Return: String
  Function Process23:
    Return: String
  Function Process9:
    Return: String
  Function Process72:
    Return: String
  Function Process77:
    Return: String
  Function Process40:
    Return: String
  Function Process30:
    Return: String
  Function Process8:
    Return: String
  Function Process11:
    Return: String
  Function Process37:
    Return: String
  Function Process4:
    Return: String
  Function Process91:
    Return: String
  Function Process31:
    Return: String
  Function Process50:
    Return: String
  Function Process20:
    Return: String
  Function Process98:
    Return: String
  Function Process85:
    Return: String
  Function Process78:
    Return: String
  Function Process1:
    Return: String
  Function Process90:
    Return: String
  Function Process17:
    Return: String
  Function Process81:
    Return: String
  Function Process71:
    Return: String
  Function Process15:
    Return: String
  Function Process42:
    Return: String
  Function Process51:
    Return: String
  Function Process5:
    Return: String
  Function Process13:
    Return: String
  Function Process29:
    Return: String
  Function Process93:
    Return: String
  Function Process70:
    Return: String
  Function Process76:
    Return: String
  Function Process10:
    Return: String
  Function Process21:
    Return: String
  Function Process100:
    Return: String
  Function Process94:
    Return: String
  Function Process25:
    Return: String
  Function Process69:
    Return: String
  Function Process24:
    Return: String
  Function Process88:
    Return: String
  Function Process73:
    Return: String
  Function Process57:
    Return: String
  Function BodyTorture:
    Return: Void
    Errors:
      - Expected bool. Found void
      - Missing return expression. Function expects `int` but body has no final expression.
