baml_language/crates/baml_tests/snapshots/parser_stress/baml_tests__parser_stress__06_codegen.snap
---
source: target/debug/build/baml_tests-6b46971f444a527b/out/generated_tests.rs
expression: output
---
function BodyTorture() -> int {
    load_const null
    store_var x

  L0:
    load_var x
    load_const 1
    bin_op +
    store_var x
    load_const null
    pop_jump_if_false L1
    jump L2

  L1:
    load_const null
    return

  L2:
    load_var x
    load_const 1
    bin_op +
    store_var x
    jump L0
}

function ComplexType() -> map<string, map<string, map<string, int[]?>>> {
    load_var _0
    return
}

function DeepExpression() -> int {
    load_const 1
    load_const 2
    bin_op +
    load_const 3
    bin_op *
    load_const 4
    bin_op -
    load_const 5
    bin_op /
    load_const 6
    bin_op +
    load_const 7
    bin_op *
    load_const 8
    bin_op -
    load_const 9
    bin_op /
    load_const 10
    bin_op +
    return
}

function Process1(input: string) -> string {
    load_const "Process1"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process10(input: string) -> string {
    load_const "Process10"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process100(input: string) -> string {
    load_const "Process100"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process11(input: string) -> string {
    load_const "Process11"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process12(input: string) -> string {
    load_const "Process12"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process13(input: string) -> string {
    load_const "Process13"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process14(input: string) -> string {
    load_const "Process14"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process15(input: string) -> string {
    load_const "Process15"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process16(input: string) -> string {
    load_const "Process16"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process17(input: string) -> string {
    load_const "Process17"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process18(input: string) -> string {
    load_const "Process18"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process19(input: string) -> string {
    load_const "Process19"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process2(input: string) -> string {
    load_const "Process2"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process20(input: string) -> string {
    load_const "Process20"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process21(input: string) -> string {
    load_const "Process21"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process22(input: string) -> string {
    load_const "Process22"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process23(input: string) -> string {
    load_const "Process23"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process24(input: string) -> string {
    load_const "Process24"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process25(input: string) -> string {
    load_const "Process25"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process26(input: string) -> string {
    load_const "Process26"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process27(input: string) -> string {
    load_const "Process27"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process28(input: string) -> string {
    load_const "Process28"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process29(input: string) -> string {
    load_const "Process29"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process3(input: string) -> string {
    load_const "Process3"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process30(input: string) -> string {
    load_const "Process30"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process31(input: string) -> string {
    load_const "Process31"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process32(input: string) -> string {
    load_const "Process32"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process33(input: string) -> string {
    load_const "Process33"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process34(input: string) -> string {
    load_const "Process34"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process35(input: string) -> string {
    load_const "Process35"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process36(input: string) -> string {
    load_const "Process36"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process37(input: string) -> string {
    load_const "Process37"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process38(input: string) -> string {
    load_const "Process38"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process39(input: string) -> string {
    load_const "Process39"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process4(input: string) -> string {
    load_const "Process4"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process40(input: string) -> string {
    load_const "Process40"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process41(input: string) -> string {
    load_const "Process41"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process42(input: string) -> string {
    load_const "Process42"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process43(input: string) -> string {
    load_const "Process43"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process44(input: string) -> string {
    load_const "Process44"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process45(input: string) -> string {
    load_const "Process45"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process46(input: string) -> string {
    load_const "Process46"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process47(input: string) -> string {
    load_const "Process47"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process48(input: string) -> string {
    load_const "Process48"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process49(input: string) -> string {
    load_const "Process49"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process5(input: string) -> string {
    load_const "Process5"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process50(input: string) -> string {
    load_const "Process50"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process51(input: string) -> string {
    load_const "Process51"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process52(input: string) -> string {
    load_const "Process52"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process53(input: string) -> string {
    load_const "Process53"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process54(input: string) -> string {
    load_const "Process54"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process55(input: string) -> string {
    load_const "Process55"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process56(input: string) -> string {
    load_const "Process56"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process57(input: string) -> string {
    load_const "Process57"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process58(input: string) -> string {
    load_const "Process58"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process59(input: string) -> string {
    load_const "Process59"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process6(input: string) -> string {
    load_const "Process6"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process60(input: string) -> string {
    load_const "Process60"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process61(input: string) -> string {
    load_const "Process61"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process62(input: string) -> string {
    load_const "Process62"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process63(input: string) -> string {
    load_const "Process63"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process64(input: string) -> string {
    load_const "Process64"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process65(input: string) -> string {
    load_const "Process65"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process66(input: string) -> string {
    load_const "Process66"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process67(input: string) -> string {
    load_const "Process67"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process68(input: string) -> string {
    load_const "Process68"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process69(input: string) -> string {
    load_const "Process69"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process7(input: string) -> string {
    load_const "Process7"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process70(input: string) -> string {
    load_const "Process70"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process71(input: string) -> string {
    load_const "Process71"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process72(input: string) -> string {
    load_const "Process72"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process73(input: string) -> string {
    load_const "Process73"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process74(input: string) -> string {
    load_const "Process74"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process75(input: string) -> string {
    load_const "Process75"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process76(input: string) -> string {
    load_const "Process76"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process77(input: string) -> string {
    load_const "Process77"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process78(input: string) -> string {
    load_const "Process78"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process79(input: string) -> string {
    load_const "Process79"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process8(input: string) -> string {
    load_const "Process8"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process80(input: string) -> string {
    load_const "Process80"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process81(input: string) -> string {
    load_const "Process81"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process82(input: string) -> string {
    load_const "Process82"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process83(input: string) -> string {
    load_const "Process83"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process84(input: string) -> string {
    load_const "Process84"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process85(input: string) -> string {
    load_const "Process85"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process86(input: string) -> string {
    load_const "Process86"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process87(input: string) -> string {
    load_const "Process87"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process88(input: string) -> string {
    load_const "Process88"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process89(input: string) -> string {
    load_const "Process89"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process9(input: string) -> string {
    load_const "Process9"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process90(input: string) -> string {
    load_const "Process90"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process91(input: string) -> string {
    load_const "Process91"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process92(input: string) -> string {
    load_const "Process92"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process93(input: string) -> string {
    load_const "Process93"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process94(input: string) -> string {
    load_const "Process94"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process95(input: string) -> string {
    load_const "Process95"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process96(input: string) -> string {
    load_const "Process96"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process97(input: string) -> string {
    load_const "Process97"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process98(input: string) -> string {
    load_const "Process98"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function Process99(input: string) -> string {
    load_const "Process99"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}
